# SMIT_Assignments_Agentic_AI

./: README.md
02_b_Mongo_DB/: database.py  hashing.py  main.py  oauth2.py
02_b_Mongo_DB/router/: authentication.py  posts.py  users.py
03_FastAPI/: pyproject.toml
03_FastAPI/01_Path,Query_Parameters/: main.py  pyproject.toml
03_FastAPI/02_Exceptions,folder_structure/: CURD_operations.py  database.py  main.py  models.py
04_Auth_Practice/: .gitignore  alembic.ini  database.py  hashing.py  main.py  models.py  pyproject.toml  schemas.py
04_Auth_Practice/alembic/: env.py
04_Auth_Practice/alembic/versions/: 1ad79d56554e_main_code.py  3cd009cc4c46_add_messages_table.py  566bd9aecb20_adding_votes_table.py  e253b104c60a_created_at_table_added.py
04_Auth_Practice/repository/: post_repo.py  user_repo.py  votes_repo.py
04_Auth_Practice/routers/: authentication.py  message_route.py  posts_routes.py  users_routes.py  votes_routes.py
04_Auth_Practice/utils/: oauth2.py
05_FastAPI_DL_Models_Practice/: database.py  main.py  model.py  pyproject.toml  schemas.py
05_FastAPI_DL_Models_Practice/repository/: upload.py
05_FastAPI_DL_Models_Practice/routes/: upload.py  user.py
Mongo_DB/: pyproject.toml  schemas.py
